# JSkiner

./: .gitignore  Cargo.toml  README.md  build-wheels.sh  pyproject.toml
.github/: check_version.py
.github/workflows/: cd.yml  ci.yml  manylinux.yml
examples/: compare.sh  cuckoo.pickle  huge.sh  log  test.sh  test_batch.sh  test_json_files.sh
examples/result/: huge.schema  latest.schema  pypi.schema  small.schema
python/jshow/: __init__.py  cmd.py  main.py  schema.py
python/jskiner/: __init__.py  batch.py  cmd.py  filter.py  json_files.py  jsonl.py  reduce.py  schema.py
python/jskiner/folder/: filter.py  main.py
src/: lib.rs
src/schema/: convert.rs  record.rs  top.rs
tests/: test_batch.py  test_eq.py  test_filter.py  test_infer.py  test_or.py  test_reduce.py
