[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "jshow"
requires-python = ">=3.7"
version = "0.0.0"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
python-source = "python"

[project.scripts]
jshow = "jshow.cmd:run"