[build-system]
requires = ["maturin>=0.12,<0.15"]
build-backend = "maturin"

[project]
name = "jskiner"
requires-python = ">=3.7"
version = "0.0.5"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  'autopep8'
]

[tool.maturin]
python-source = "python"

[project.scripts]
jskiner = "jskiner.cmd:run"