[build-system]
requires = ["maturin>=0.12,<0.15"]
build-backend = "maturin"

[project]
name = "jskiner"
requires-python = ">=3.7"
version = "0.1.0"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython"
]

[project.urls]
documentation = "https://github.com/jeffrey82221/JSkiner/tree/doc/project#readme"
repository = "https://github.com/jeffrey82221/JSkiner"

[tool.maturin]
python-source = "python"

[project.scripts]
jskiner = "jskiner.cmd:run"
